# Engineering_Python

./: PSYCHRO.XLS  README.md  calcs.js  index.css  index.html  main.py  psychro.py
Old/: README  calcs.js  index.css  psychro_vba
psychro-calc/: README.md  pyproject.toml
psychro-calc/xenspidey/psychro_calc/: main.py  psychro.py
